bug: image alignment

--- a/fb-clone-app/src/components/Feed.css
+++ b/fb-clone-app/src/components/Feed.css
@@ -8,5 +8,5 @@
 
 .feed {
     padding-top: 0.5rem;
-    width: 40%;
+    width: 608px;
 }
