--- a/fb-clone-app/src/components/Post.css
+++ b/fb-clone-app/src/components/Post.css
@@ -28,15 +28,17 @@
 }
 
 .ip_img {
-    width: 612px;
+    max-width: 608px;
     height: 500px;
+    display: block;
+    margin: auto;
 }
 
 .post__input {
     display: flex;
     flex-direction: column;
     align-items: center;
-    }
+}
 
 .post__input>p, .icons--lc>p {
     margin-inline-start: 1rem;
